@@ -1,0 +1,2 @@
+DSN + diag extraction
+user@example.com	failure	The user(s) account is temporarily over quota.
