@@ -1,0 +1,2 @@
+MMS/WorldSecure
+user@example.com	failure	550 <user@example.com>... Relaying denied
